--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
 [build-system]
-requires = ["flit"]
+requires = [
+    "dask",
+    "flit",
+    "scikit-image>=0.20.0"
+]
 build-backend = "flit.buildapi"
 
 [project]
